--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.57.1",
     "simple-line-icons": "^2.4.1",
     "socket.io-client": "^4.2.0",
     "validatorjs": "^3.18.1"
@@ -36,7 +37,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
